5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4154/executions/1800_2564.log
== TEST (2019-06-06 11:11:20) 
-- CODE:
from numpy import *
time1 = array(eval(input('asds: ')))
time2 = array(eval(input('asds: ')))
vet = zeros(3, dtype = int)
for i in range(size(time1)):
	for i in range(size(time1)):
		if time1[i]>time2[i]:
			vet[0] = vet[0]+1
		elif time[i] == time2[i]:
			vet[1] = vet[1] + 1
		elif time[i] < time2[i]:
			vet[2] = vet[2] + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:11:25) 
-- CODE:
from numpy import *
time1 = array(eval(input('asds: ')))
time2 = array(eval(input('asds: ')))
vet = zeros(3, dtype = int)
for i in range(size(time1)):
	for i in range(size(time1)):
		if time1[i]>time2[i]:
			vet[0] = vet[0]+1
		elif time[i] == time2[i]:
			vet[1] = vet[1] + 1
		elif time[i] < time2[i]:
			vet[2] = vet[2 ] + 1
-- EXECUTION TIME:
1.02695
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2564/main.py", line 9, in <module>
    elif time[i] == time2[i]:
NameError: name 'time' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:11:46) 
-- CODE:
from numpy import *
time1 = array(eval(input('asds: ')))
time2 = array(eval(input('asds: ')))
vet = zeros(3, dtype = int)
for i in range(size(time1)):
	for i in range(size(time1)):
		if time1[i]>time2[i]:
			vet[0] = vet[0]+1
		elif time1[i] == time2[i]:
			vet[1] = vet[1] + 1
		elif time1[i] < time2[i]:
			vet[2] = vet[2 ] + 1
-- EXECUTION TIME:
0.967569
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:

-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:

-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:11:52) 
-- CODE:
from numpy import *
time1 = array(eval(input('asds: ')))
time2 = array(eval(input('asds: ')))
vet = zeros(3, dtype = int)
for i in range(size(time1)):
	for i in range(size(time1)):
		if time1[i]>time2[i]:
			vet[0] = vet[0]+1
		elif time1[i] == time2[i]:
			vet[1] = vet[1] + 1
		elif time1[i] < time2[i]:
			vet[2] = vet[2 ] + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:11:56) 
-- CODE:
from numpy import *
time1 = array(eval(input('asds: ')))
time2 = array(eval(input('asds: ')))
vet = zeros(3, dtype = int)
for i in range(size(time1)):
	for i in range(size(time1)):
		if time1[i]>time2[i]:
			vet[0] = vet[0]+1
		elif time1[i] == time2[i]:
			vet[1] = vet[1] + 1
		elif time1[i] < time2[i]:
			vet[2] = vet[2 ] + 1
-- EXECUTION TIME:
1.11365
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:

-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:

-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:12:55) 
-- CODE:
from numpy import *
time1 = array(eval(input('asds: ')))
time2 = array(eval(input('asds: ')))
vet = zeros(3, dtype = int)
for i in range(size(time1)):
	if time1[i]>time2[i]:
		vet[0] = vet[0]+1
	elif time1[i] == time2[i]:
		vet[1] = vet[1] + 1
	elif time1[i] < time2[i]:
		vet[2] = vet[2] + 1
-- EXECUTION TIME:
0.956323
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:

-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:

-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:12:58) 
-- CODE:
from numpy import *
time1 = array(eval(input('asds: ')))
time2 = array(eval(input('asds: ')))
vet = zeros(3, dtype = int)
for i in range(size(time1)):
	if time1[i]>time2[i]:
		vet[0] = vet[0]+1
	elif time1[i] == time2[i]:
		vet[1] = vet[1] + 1
	elif time1[i] < time2[i]:
		vet[2] = vet[2] + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:13:03) 
-- CODE:
from numpy import *
time1 = array(eval(input('asds: ')))
time2 = array(eval(input('asds: ')))
vet = zeros(3, dtype = int)
for i in range(size(time1)):
	if time1[i]>time2[i]:
		vet[0] = vet[0]+1
	elif time1[i] == time2[i]:
		vet[1] = vet[1] + 1
	elif time1[i] < time2[i]:
		vet[2] = vet[2] + 1
-- EXECUTION TIME:
1.24698
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:

-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:

-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:13:11) 
-- CODE:
from numpy import *
time1 = array(eval(input('asds: ')))
time2 = array(eval(input('asds: ')))
vet = zeros(3, dtype = int)
for i in range(size(time1)):
	if time1[i]>time2[i]:
		vet[0] = vet[0]+1
	elif time1[i] == time2[i]:
		vet[1] = vet[1] + 1
	elif time1[i] < time2[i]:
		vet[2] = vet[2] + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:15:11) 
-- CODE:
from numpy import *
time1 = array(eval(input('asds: ')))
time2 = array(eval(input('asds: ')))
vet = zeros(3, dtype = int)
for i in range(size(time1)):
	if time1[i]>time2[i]:
		vet[0] = vet[0]+1
	elif time1[i] == time2[i]:
		vet[1] = vet[1] + 1
	elif time1[i] < time2[i]:
		vet[2] = vet[2] + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:15:12) 
-- CODE:
from numpy import *
time1 = array(eval(input('asds: ')))
time2 = array(eval(input('asds: ')))
vet = zeros(3, dtype = int)
for i in range(size(time1)):
	if time1[i]>time2[i]:
		vet[0] = vet[0]+1
	elif time1[i] == time2[i]:
		vet[1] = vet[1] + 1
	elif time1[i] < time2[i]:
		vet[2] = vet[2] + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:15:13) 
-- CODE:
from numpy import *
time1 = array(eval(input('asds: ')))
time2 = array(eval(input('asds: ')))
vet = zeros(3, dtype = int)
for i in range(size(time1)):
	if time1[i]>time2[i]:
		vet[0] = vet[0]+1
	elif time1[i] == time2[i]:
		vet[1] = vet[1] + 1
	elif time1[i] < time2[i]:
		vet[2] = vet[2] + 1
-- EXECUTION TIME:
0.968216
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:

-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
asds: asds:
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
asds: asds:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:15:36) 
-- CODE:
from numpy import *
time1 = array(eval(input('asds: ')))
time2 = array(eval(input('asds: ')))
vet = zeros(3, dtype = int)
for i in range(size(time1)):
	if time1[i]>time2[i]:
		vet[0] = vet[0]+1
	elif time1[i] == time2[i]:
		vet[1] = vet[1] + 1
	elif time1[i] < time2[i]:
		vet[2] = vet[2] + 1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:15:42) 
-- CODE:
from numpy import *
time1 = array(eval(input('asds: ')))
time2 = array(eval(input('asds: ')))
vet = zeros(3, dtype = int)
for i in range(size(time1)):
	if time1[i]>time2[i]:
		vet[0] = vet[0]+1
	elif time1[i] == time2[i]:
		vet[1] = vet[1] + 1
	elif time1[i] < time2[i]:
		vet[2] = vet[2] + 1
print(vet)
-- EXECUTION TIME:
0.965116
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
